💄 Fix toast spacing

--- a/presentations/components/styles/Movement.css
+++ b/presentations/components/styles/Movement.css
@@ -1,7 +1,7 @@
 .movement {
   background-color: black;
   color: white;
-  margin-top: 3rem;
+  margin-top: 30px;
   font-size: 25px;
   border: 1px solid #232323;
   color: #00f396db;
